--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -43,7 +43,13 @@
       - timed: 'H H * * *'
 
     builders:
-      - shell: '{script}'
+      - shell: '{obj:pre-script}'
+      - lf-infra-create-netrc:
+          server-id: raw
+      - inject:
+          properties-content: 'ARTIFACT_NAME={artifact-name}'
+      - shell: '{obj:post-script}'
+      - lf-provide-maven-settings-cleanup
 
     publishers:
       - infra-shiplogs:
