VNFRQTS - Update JJB to upload artifacts
Update the VNFRQTS JJB to upload RAW artifacts
to nexus.

Change-Id: I34a3239bbe6d0f757c3f71591c8a2c358e67a0e5
Issue-ID: VNFRQTS-538
Signed-off-by: Hagop Bozawglanian <hagop.bozawglanian@att.com>

--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -44,6 +44,12 @@
 
     builders:
       - shell: '{script}'
+      - lf-infra-create-netrc:
+          server-id: onap-staging
+      - inject:
+          properties-content: |
+            ARTIFACT_NAME=docs/data/needs.json
+
 
     publishers:
       - infra-shiplogs:
