VNFRQTS - Update JJB to upload artifacts
Update the VNFRQTS JJB to upload RAW artifacts
to nexus.

Change-Id: I34a3239bbe6d0f757c3f71591c8a2c358e67a0e5
Issue-ID: VNFRQTS-538
Signed-off-by: Hagop Bozawglanian <hagop.bozawglanian@att.com>

--- a/jjb/vnfrqts/vnfrqts-requirements.yaml
+++ b/jjb/vnfrqts/vnfrqts-requirements.yaml
@@ -17,5 +17,7 @@
           branch: 'master'
     jobs:
       - '{project-name}-{stream}-build-and-upload':
-          script:
-              !include-raw-escape: 'build-needs.sh'
+          script: !include-raw-escape: pre-build-needs.sh
+          artifact-name: 'docs/data/needs.json'
+          script: !include-raw-escape: 'upload-artifact.sh'
+
