--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -44,6 +44,12 @@
 
     builders:
       - shell: '{script}'
+      - lf-infra-create-netrc:
+          server-id: onap-staging
+      - inject:
+          properties-content: 'ARTIFACT_NAME={artifact-name}'
+      - shell: '{script}'
+      - lf-provide-maven-settings-cleanup
 
     publishers:
       - infra-shiplogs:
