--- a/jjb/oom/oom-image-verify.yaml
+++ b/jjb/oom/oom-image-verify.yaml
@@ -1,9 +1,39 @@
 ---
 - job-template:
     name: '{project-name}-{stream}-image-verify'
-    project-type: freestyle
-    path: '$WORKSPACE'
     concurrent: true
+    branch: master
+    submodule-recursive: true
+
+    build_script: ''
+    git-url: '$GIT_URL/$PROJECT'
+    post_build_script: ''
+    pre_build_script: ''
+    submodule-disable: false
+    submodule-timeout: 10
+    build-timeout: 180
+
+    project-type: freestyle
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - lf-infra-parameters:
+          branch: '{branch}'
+          project: '{project}'
+          stream: '{stream}'
+          lftools-version: '{lftools-version}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    publishers:
+      - lf-infra-publish
 
     scm:
       - gerrit-trigger-scm:
@@ -21,7 +51,4 @@
 
     builders:
       - lf-infra-pre-build
-      - shell: 'make check-for-staging-images | true'
-
-    publishers:
-      - infra-shiplogs:
+      - shell: 'cd kubernetes; make check-for-staging-images 2>&1'
