--- a/jjb/integration/xtesting/integration-xtesting.yaml
+++ b/jjb/integration/xtesting/integration-xtesting.yaml
@@ -106,6 +106,9 @@
       - 'frankfurt':
             branch: 'frankfurt'
             files: ''
+      - 'develop':
+            branch: 'develop'
+            files: ''
     docker-root: '$WORKSPACE'
     mvn-settings: 'integration-settings'
     build-node: ubuntu1804-docker-8c-8g
