Fix trigger path and improve docker tag
 - fix the files parameter (which translates into file path in final
   Jenkins configuration) for the gerrit trigger
 - use BUILD_TAG instead of BUILD_ID for docker tag to be passed

Issue-ID: INT-1760
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I4c0607e3ee0220cccecfd560dd6cd4cfb59de33f

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -168,20 +168,20 @@
          -  project: "{project-name}-{stream}-docker-golang-shell-daily"
             condition: UNSTABLE_OR_BETTER
             predefined-parameters: |
-              UNIQUE_DOCKER_TAG=$BUILD_ID
+              UNIQUE_DOCKER_TAG=$BUILD_TAG
             block: true
       - trigger-builds:
          -  project: "{project-name}-{stream}-csit-{review-functionality}"
             condition: UNSTABLE_OR_BETTER
             predefined-parameters: |
-              UNIQUE_DOCKER_TAG=$BUILD_ID
+              UNIQUE_DOCKER_TAG=$BUILD_TAG
             block: true
     triggers:
       - gerrit-trigger-patch-submitted:
           server: '{server-name}'
           project: '{project}'
           branch: '{branch}'
-          files: '**/{project}/**'
+          files: '**'
     publishers:
       - lf-infra-publish
 
