Apply given unique docker tag to image
 - add input parameter to docker job and pass it to the build script
   (which has the requirement to use it to use it to tag any images
   it creates and pushes to Nexus)
 - this commit has no practical effect on music docker build until
   https://gerrit.onap.org/r/c/music/distributed-kv-store/+/114637
   is merged

Issue-ID: INT-1760
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I7ed89081e7d399c46ec875659d4c022a85dbce54

--- a/jjb/global-templates-golang.yaml
+++ b/jjb/global-templates-golang.yaml
@@ -169,7 +169,8 @@
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
-
+      - integration-unique-docker-tag:
+          unique-docker-tag: ''
     scm:
       - gerrit-trigger-scm:
           refspec: ''
