Update jenkins branches from frankfurt to guilin
Issue-ID: AAI-3221
Change-Id: I8515ddd136e188c1efcfef51c311a15d09ac4180
Signed-off-by: Harish Venkata Kajur <vk250x@att.com>

--- a/jjb/aai/aai-cacher.yaml
+++ b/jjb/aai/aai-cacher.yaml
@@ -20,8 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'aai-cacher-settings'
     mvn-version: 'mvn35'
     files: '**'
