--- a/jjb/aai/aai-graphadmin.yaml
+++ b/jjb/aai/aai-graphadmin.yaml
@@ -26,8 +26,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'aai-graphadmin-settings'
     mvn-version: 'mvn35'
     files: '**'
