--- a/jjb/aai/aai-router-core-service.yaml
+++ b/jjb/aai/aai-router-core-service.yaml
@@ -19,8 +19,8 @@
           build-node: centos7-docker-8c-8g
     project: 'aai/router-core'
     stream:
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-router-core-settings'
