--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -25,8 +25,8 @@
     project: 'aai/search-data-service'
     docker-image-name: 'onap/search-data-service'
     stream:
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-search-data-service-settings'
