--- a/jjb/aai/aai-validation.yaml
+++ b/jjb/aai/aai-validation.yaml
@@ -24,8 +24,8 @@
           build-node: centos7-docker-8c-8g
     project: 'aai/validation'
     stream:
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-validation-settings'
