--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -12,3 +12,31 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+    name: cps
+    java-version: openjdk11
+    project-name: 'cps'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage:
+          sign-artifacts: true
+          build-node: centos7-builder-2c-1g
+          maven-versions-plugin: true
+      - gerrit-maven-docker-stage:
+          build-node: centos7-builder-2c-1g
+          maven-versions-plugin: true
+          mvn-params: '-P docker'
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
+      - '{project-name}-gerrit-release-jobs':
+          build-node: centos7-builder-2c-1g
+    project: 'cps'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'cps-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: centos7-builder-2c-1g
