Add project-specific CSIT job template
 - add template for project-specific CSIT
 - apply the template in music component (note that this requires
   https://gerrit.onap.org/r/c/music/distributed-kv-store/+/114637
   to be merged to find the proper plans)
 - pass selected infra parameters to triggered docker build and
   CSIT jobs to have them use appropriate branch

Issue-ID: INT-1760
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Id83e54548243e9d5dc7d932acae469a8b295c48f

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -68,6 +68,11 @@
       - shell: "${WORKSPACE}/run-csit.sh ${TESTPLAN} ${TESTOPTIONS}"
 
 - builder:
+    name: integration-run-project-test
+    builders:
+      - shell: "${WORKSPACE}/csit/run-project-csit.sh ${TESTPLAN} ${TESTOPTIONS}"
+
+- builder:
     name: integration-autorelease-fix-relativepaths
     builders:
       - shell: "${WORKSPACE}/autorelease/scripts/fix-relativepaths.sh"
@@ -126,6 +131,16 @@
     publishers:
       - robot:
           output-path: 'archives'
+          other-files: ''
+          unstable-threshold: '{unstable-if}'
+          pass-threshold: '{pass-if}'
+          only-critical: false
+
+- publisher:
+    name: integration-project-robot
+    publishers:
+      - robot:
+          output-path: 'csit/archives'
           other-files: ''
           unstable-threshold: '{unstable-if}'
           pass-threshold: '{pass-if}'
