Add cps sonar jobs configuration
Issue-ID: CPS-5
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: Ie79e83f3d15223e8b7f26bee3b76afd35dede482

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -17,26 +17,45 @@
     name: cps
     java-version: openjdk11
     project-name: 'cps'
+    project: 'cps'
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - gerrit-maven-stage:
           sign-artifacts: true
-          build-node: centos7-builder-2c-1g
+          build-node: centos7-builder-4c-4g
           maven-versions-plugin: true
       - gerrit-maven-docker-stage:
-          build-node: centos7-builder-2c-1g
+          build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
           mvn-params: '-P docker'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
       - '{project-name}-gerrit-release-jobs':
-          build-node: centos7-builder-2c-1g
-    project: 'cps'
+          build-node: centos7-docker-8c-8g
     stream:
       - 'master':
           branch: 'master'
     mvn-settings: 'cps-settings'
     files: '**'
     archive-artifacts: ''
-    build-node: centos7-builder-2c-1g
+    build-node: ubuntu1804-builder-4c-4g
+
+- project:
+    name: cps-sonar
+    java-version: openjdk11
+    jobs:
+      - gerrit-maven-sonar
+    sonarcloud: true
+    sonarcloud-project-organization: '{sonarcloud_project_organization}'
+    sonarcloud-api-token: '{sonarcloud_api_token}'
+    sonarcloud-project-key: '{sonarcloud_project_organization}_{project-name}'
+    sonar-mvn-goal: '{sonar_mvn_goal}'
+    cron: '@daily'
+    build-node: ubuntu1804-builder-4c-4g
+    project: 'cps'
+    project-name: 'cps'
+    branch: 'master'
+    mvn-settings: 'cps-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
