Add CPS clm jobs configuration
Issue-ID: CPS-5
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: I49f660f9ae8b719fe085de9e9f47765f10328078

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -14,6 +14,18 @@
       - gerrit-info-yaml-verify
 
 - project:
+      name: cps-clm
+      java-version: openjdk11
+      jobs:
+          - gerrit-maven-clm
+      nexus-iq-namespace: 'onap-'
+      project: 'cps'
+      project-name: 'cps'
+      branch: 'master'
+      mvn-settings: 'cps-settings'
+      build-node: ubuntu1804-builder-4c-4g
+
+- project:
     name: cps
     java-version: openjdk11
     project-name: 'cps'
