Create guilin xtesting docker for guilin branch
Issue-ID: INT-1781

Signed-off-by: mrichomme <morgan.richomme@orange.com>
Change-Id: Ia2fb3d08d32dfce04b66441af0fa69b3a56695c4

--- a/jjb/integration/xtesting/integration-xtesting.yaml
+++ b/jjb/integration/xtesting/integration-xtesting.yaml
@@ -106,6 +106,9 @@
       - 'frankfurt':
             branch: 'frankfurt'
             files: ''
+      - 'guilin':
+            branch: 'guilin'
+            files: ''
       - 'develop':
             branch: 'develop'
             files: ''
