Use maven 3.6 for CPS project
Issue-ID: CPS-5
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: I712482df70cef37c56668212e3388213a0a1ade7

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -16,6 +16,7 @@
 - project:
       name: cps-clm
       java-version: openjdk11
+      mvn-version: "mvn36"
       jobs:
           - gerrit-maven-clm
       nexus-iq-namespace: 'onap-'
@@ -28,6 +29,7 @@
 - project:
     name: cps
     java-version: openjdk11
+    mvn-version: "mvn36"
     project-name: 'cps'
     project: 'cps'
     jobs:
@@ -56,6 +58,7 @@
 - project:
     name: cps-sonar
     java-version: openjdk11
+    mvn-version: "mvn36"
     jobs:
       - gerrit-maven-sonar
     sonarcloud: true
