Use maven 3.6 for CPS project
Issue-ID: CPS-5
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Change-Id: I712482df70cef37c56668212e3388213a0a1ade7

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -28,6 +28,7 @@
 - project:
     name: cps
     java-version: openjdk11
+    mvn-version : "mvn36"
     project-name: 'cps'
     project: 'cps'
     jobs:
