Setting maven-version property for old templates
Issue-ID: CPS-5

Signed-off-by: ToineSiebelink <toine.siebelink@est.tech>
Change-Id: I6319f48fa94a6f0acb24f3cbfecbf7f4bc73dcc3

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -17,6 +17,7 @@
       name: cps-clm
       java-version: openjdk11
       mvn-version: "mvn36"
+      maven-version: "mvn36"
       jobs:
           - gerrit-maven-clm
       nexus-iq-namespace: 'onap-'
@@ -30,6 +31,7 @@
     name: cps
     java-version: openjdk11
     mvn-version: "mvn36"
+    maven-version: "mvn36"
     project-name: 'cps'
     project: 'cps'
     jobs:
@@ -59,6 +61,7 @@
     name: cps-sonar
     java-version: openjdk11
     mvn-version: "mvn36"
+    maven-version: "mvn36"
     jobs:
       - gerrit-maven-sonar
     sonarcloud: true
