[CLAMP] Add guilin to jenkins
Add guilin branch in jenkins build
Signed-off-by: sebdet <sebastien.determe@intl.att.com>
Change-Id: Ifddf12ac2162276b232947b30dc7c0c9ab888c6d
Issue-ID: CLAMP-979

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -34,8 +34,8 @@
               branch: 'master'
         - 'frankfurt':
               branch: 'frankfurt'
-        - 'elalto':
-              branch: 'elalto'
+        - 'guilin':
+              branch: 'guilin'
         - 'tosca-poc':
               branch: 'tosca-poc'
     mvn-settings: 'clamp-settings'
