Create guilin jenkins jobs for OOF
Issue-ID: OPTFRA-873
Signed-off-by: krishnaa96 <krishna.moorthy6@wipro.com>
Change-Id: I76295159f305e474b9cfa52a28a998bcdadfa49c

--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -6,8 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'optf-has-settings'
     subproject:
       - 'conductor':
@@ -66,8 +66,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'optf-has-settings'
 
 - project:
