--- a/jjb/global-templates-golang.yaml
+++ b/jjb/global-templates-golang.yaml
@@ -169,12 +169,73 @@
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
-      - integration-unique-docker-tag:
-          unique-docker-tag: ''
     scm:
       - gerrit-trigger-scm:
           refspec: ''
           choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - '{golangver}'
+      - infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      # 12 AM UTC
+      - timed: '@daily'
+      - gerrit-trigger-release-manually:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+
+    builders:
+      - lf-infra-pre-build
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+
+      - docker-login
+
+      - shell: '{script}'
+
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
+
+- job-template:
+    # Job template PoC for building & pushing snapshot docker images
+    # for CSIT verification
+    #
+    # golangver can be set to golang110 or golang111
+    # depending on what version is needed by the project
+    # default is golang110
+    #
+    # The purpose of this job template is to run:
+    #  1. login to the docker registry
+    #  2. run a specified shell builder
+    #
+
+    name: '{project-name}-{stream}-docker-golang-snapshot-PoC'
+    golangver: 'golang110'
+    project-type: freestyle
+    node: 'ubuntu1804-docker-8c-8g'
+    disabled: '{disabled}'
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-unique-docker-tag:
+          unique-docker-tag: ''
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
           submodule-recursive: '{submodule-recursive}'
 
     wrappers:
