Add unified merge PoC job templates
 - add PoC templates for unified merge and docker image STAGING jobs
   - unified merge job is triggered by merge submit trigger
   - the triggered docker build and CSIT are based on master
 - use the templates in music
 - restore the original {project-name}-{stream}-docker-golang-shell-daily
   music job
 - remove unsupported "condition" parameters from trigger-jobs
 - change project-specific CSIT to a single job that triggers all the
   plans under the project
 - change snapshot docker build to a single job that is named by
   artifact type (in music's case golang)
 - these changes should not be applied before integration/csit commit
   https://gerrit.onap.org/r/c/integration/csit/+/115170 is merged!

Issue-ID: INT-1783
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: If838b264a82069504817bcf2612011c33e3d26f2

--- a/jjb/music/music-distributed-kv-store-csit.yaml
+++ b/jjb/music/music-distributed-kv-store-csit.yaml
@@ -4,6 +4,7 @@
     jobs:
       - '{project-name}-{stream}-project-csit-{functionality}-PoC'
       - '{project-name}-unified-review-{stream}-PoC'
+      - '{project-name}-unified-merge-{stream}-PoC'
     project-name: 'music-distributed-kv-store'
     project: 'music/distributed-kv-store'
     stream: 'master'
