--- a/jjb/global-templates-docker.yaml
+++ b/jjb/global-templates-docker.yaml
@@ -300,3 +300,52 @@
               predefined-parameters: |
                 PARENT_JOB_NAME=$JOB_NAME
                 DOCKERHUB_REGISTRY=docker.io
+
+- job-template:
+    # Job template PoC for tagging snapshot docker images
+    # identified by given unique tag as STAGING
+    # The purpose of this job template is to run:
+    #  1. login to the docker registry
+    #  2. run a specified shell builder for tagging
+    #
+
+    name: '{project-name}-{stream}-docker-staging-PoC'
+    project-type: freestyle
+    node: 'ubuntu1804-docker-8c-8g'
+    disabled: '{disabled}'
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-unique-docker-tag:
+          unique-docker-tag: ''
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    builders:
+      - lf-infra-pre-build
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+
+      - docker-login
+
+      - shell: '{script}'
+
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
+
