--- a/jjb/music/music-distributed-kv-store.yaml
+++ b/jjb/music/music-distributed-kv-store.yaml
@@ -6,13 +6,20 @@
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
-      - '{project-name}-{stream}-docker-golang-snapshot-PoC':
+      - '{project-name}-{stream}-docker-golang-shell-daily':
           script:
             !include-raw-escape: 'build-music-distributed-kv-store-image.sh'
+      - '{project-name}-{stream}-golang-docker-snapshot-PoC':
+          script:
+            !include-raw-escape: 'build-music-distributed-kv-store-image.sh'
+      - '{project-name}-{stream}-docker-staging-PoC':
+          script:
+            !include-raw-escape: 'tag-music-distributed-kv-store-image-staging.sh'
     project: 'music/distributed-kv-store'
     stream:
       - 'master':
           branch: 'master'
+    artifact-type: 'golang'
     mvn-settings: 'music-distributed-kv-store-settings'
     files: '**'
     archive-artifacts: ''
