Add unified merge PoC job templates
 - add PoC templates for unified merge and docker image STAGING jobs
   - unified merge job is triggered by merge submit trigger
   - the triggered docker build and CSIT are based on master
 - use the templates in music
 - restore the original {project-name}-{stream}-docker-golang-shell-daily
   music job
 - remove unsupported "condition" parameters from trigger-jobs

Issue-ID: INT-1783
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: If838b264a82069504817bcf2612011c33e3d26f2

--- a/jjb/music/music-distributed-kv-store.yaml
+++ b/jjb/music/music-distributed-kv-store.yaml
@@ -6,9 +6,15 @@
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
+      - '{project-name}-{stream}-docker-golang-shell-daily':
+          script:
+            !include-raw-escape: 'build-music-distributed-kv-store-image.sh'
       - '{project-name}-{stream}-docker-golang-snapshot-PoC':
           script:
             !include-raw-escape: 'build-music-distributed-kv-store-image.sh'
+      - '{project-name}-{stream}-docker-staging-PoC':
+          script:
+            !include-raw-escape: 'tag-music-distributed-kv-store-image-staging.sh'
     project: 'music/distributed-kv-store'
     stream:
       - 'master':
