Add unified merge PoC job templates
 - add PoC templates for unified merge and docker image STAGING jobs
   - unified merge job is triggered by merge submit trigger
   - the triggered docker build and CSIT are based on master
 - use the templates in music
 - restore the original {project-name}-{stream}-docker-golang-shell-daily
   music job
 - remove unsupported "condition" parameters from trigger-jobs
 - change project-specific CSIT to a single job that triggers all the
   plans under the project
 - change snapshot docker build to a single job that is named by
   artifact type (in music's case golang)
 - these changes should not be applied before integration/csit commit
   https://gerrit.onap.org/r/c/integration/csit/+/115170 is merged!

Issue-ID: INT-1783
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: If838b264a82069504817bcf2612011c33e3d26f2

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -70,7 +70,7 @@
 - builder:
     name: integration-run-project-test
     builders:
-      - shell: "${WORKSPACE}/csit/run-project-csit.sh ${TESTPLAN} ${TESTOPTIONS}"
+      - shell: "${WORKSPACE}/csit/run-project-csit.sh ${TESTOPTIONS}"
 
 - builder:
     name: integration-autorelease-fix-relativepaths
@@ -131,6 +131,9 @@
     publishers:
       - robot:
           output-path: 'archives'
+          output-xml: '**/output.xml'
+          report-html: '**/report.html'
+          log-html: '**/log.html'
           other-files: ''
           unstable-threshold: '{unstable-if}'
           pass-threshold: '{pass-if}'
@@ -141,6 +144,9 @@
     publishers:
       - robot:
           output-path: 'csit/archives'
+          output-xml: '**/output.xml'
+          report-html: '**/report.html'
+          log-html: '**/log.html'
           other-files: ''
           unstable-threshold: '{unstable-if}'
           pass-threshold: '{pass-if}'
