--- a/jjb/music/music-distributed-kv-store-csit.yaml
+++ b/jjb/music/music-distributed-kv-store-csit.yaml
@@ -2,18 +2,16 @@
 - project:
     name: music-distributed-kv-store-csit
     jobs:
-      - '{project-name}-{stream}-project-csit-{functionality}-PoC'
+      - '{project-name}-{stream}-project-csit-PoC'
       - '{project-name}-unified-review-{stream}-PoC'
+      - '{project-name}-unified-merge-{stream}-PoC'
     project-name: 'music-distributed-kv-store'
     project: 'music/distributed-kv-store'
     stream: 'master'
+    artifact-type: 'golang'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'music-distributed-kv-store-settings'
     mvn-global-settings: global-settings
-    functionality:
-      - 'music-distributed-kv-store-test-plan'
-    jobs_to_trigger:
-      - 'music-distributed-kv-store-master-project-csit-music-distributed-kv-store-test-plan-PoC'
     robot-options: ''
     branch: 'master'
