--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -130,7 +130,7 @@
           send-to-individuals: true
 
 - job-template:
-    name: '{project-name}-{stream}-project-csit-{functionality}-PoC'
+    name: '{project-name}-{stream}-project-csit-PoC'
     disabled: '{disabled}'
     project-type: freestyle
     build-node: 'ubuntu1804-docker-8c-8g'
@@ -150,8 +150,6 @@
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
-      - integration-test-plan:
-          test-plan: 'plans/{functionality}'
       - integration-test-options:
           test-options: '{robot-options}'
       - integration-unique-docker-tag:
@@ -223,8 +221,7 @@
           global-settings-file: "{mvn-global-settings}"
           settings-file: "{mvn-settings}"
       - trigger-builds:
-         -  project: "{project-name}-{stream}-docker-golang-snapshot-PoC"
-            condition: UNSTABLE_OR_BETTER
+         -  project: "{project-name}-{stream}-{artifact-type}-docker-snapshot-PoC"
             predefined-parameters: |
               UNIQUE_DOCKER_TAG=$BUILD_TAG
               PROJECT=$PROJECT
@@ -232,8 +229,7 @@
               GERRIT_REFSPEC=$GERRIT_REFSPEC
             block: true
       - trigger-builds:
-         -  project: "{jobs_to_trigger}"
-            condition: UNSTABLE_OR_BETTER
+         -  project: "{project-name}-{stream}-project-csit-PoC"
             predefined-parameters: |
               UNIQUE_DOCKER_TAG=$BUILD_TAG
               PROJECT=$PROJECT
@@ -242,6 +238,74 @@
             block: true
     triggers:
       - gerrit-trigger-patch-submitted:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+          files: '**'
+    publishers:
+      - lf-infra-publish
+
+- job-template:
+    name: '{project-name}-unified-merge-{stream}-PoC'
+    disabled: '{disabled}'
+    project-type: freestyle
+    build-node: 'ubuntu1804-docker-8c-8g'
+    java-version: 'openjdk11'
+
+    properties:
+      - lf-infra-properties:
+          project: '{project}'
+          build-days-to-keep: '{build-days-to-keep}'
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+    builders:
+      - lf-infra-pre-build
+      - lf-maven-install:
+          mvn-version: "{mvn-version}"
+      - lf-update-java-alternatives:
+          java-version: "{java-version}"
+      - lf-provide-maven-settings:
+          global-settings-file: "{mvn-global-settings}"
+          settings-file: "{mvn-settings}"
+      - trigger-builds:
+         -  project: "{project-name}-{stream}-{artifact-type}-docker-snapshot-PoC"
+            predefined-parameters: |
+              UNIQUE_DOCKER_TAG=$BUILD_TAG
+              PROJECT=$PROJECT
+              BRANCH=$BRANCH
+              GERRIT_REFSPEC=$GERRIT_REFSPEC
+            block: true
+      - trigger-builds:
+         -  project: "{project-name}-{stream}-project-csit-PoC"
+            predefined-parameters: |
+              UNIQUE_DOCKER_TAG=$BUILD_TAG
+              PROJECT=$PROJECT
+              BRANCH=$BRANCH
+              GERRIT_REFSPEC=$GERRIT_REFSPEC
+            block: true
+      - trigger-builds:
+         -  project: "{project-name}-{stream}-docker-staging-PoC"
+            predefined-parameters: |
+              UNIQUE_DOCKER_TAG=$BUILD_TAG
+              PROJECT=$PROJECT
+              BRANCH=$BRANCH
+              GERRIT_REFSPEC=$GERRIT_REFSPEC
+            block: true
+    triggers:
+      - gerrit-trigger-patch-merged:
           server: '{server-name}'
           project: '{project}'
           branch: '{branch}'
