VID Guilin Release
Issue-ID: VID-921

Change-Id: I7ad037abd9e83d2a9437066066ab9244826f7795
Signed-off-by: Ikramullah, Ikram (fi241c) <ikram@research.att.com>

--- a/jjb/vid/vid.yaml
+++ b/jjb/vid/vid.yaml
@@ -27,8 +27,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'vid-settings'
     files: '**'
     archive-artifacts: ''
