[MULTICLOUD] Add guilin to jenkins
Add guilin branch in jenkins build
Issue-ID: MULTICLOUD-1249

Signed-off-by: Bin Yang <bin.yang@windriver.com>
Change-Id: I9cb0f083d81a63adb7ab844c997e3bd119ada4af

--- a/jjb/multicloud/multicloud-framework-java.yaml
+++ b/jjb/multicloud/multicloud-framework-java.yaml
@@ -7,6 +7,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
+      - 'guilin':
+          branch: 'guilin'
+          java-version: openjdk11
     mvn-settings: 'multicloud-framework-settings'
     subproject:
       - 'multivimbroker':
