[MULTICLOUD] Add guilin to jenkins
Add guilin branch in jenkins build
Issue-ID: MULTICLOUD-1249

Signed-off-by: Bin Yang <bin.yang@windriver.com>
Change-Id: I9cb0f083d81a63adb7ab844c997e3bd119ada4af

--- a/jjb/multicloud/multicloud-framework-python.yaml
+++ b/jjb/multicloud/multicloud-framework-python.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'multicloud-framework-settings'
     build-node: 'ubuntu1804-builder-4c-4g'
     subproject:
