Switch plugin build to 3.x
Change-Id: Ic08176eaad80536ec17c39599bc4ced65481ca91
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2525

--- a/jjb/dcaegen2/dcaegen2-platform-plugins.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-plugins.yaml
@@ -11,6 +11,7 @@
     stream:
       - 'master':
           branch: 'master'
+          python-version: python3
       - 'guilin':
           branch: 'guilin'
     mvn-settings: 'dcaegen2-platform-plugins-settings'
