--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -31,8 +31,9 @@
           java-version: openjdk11
       - 'frankfurt':
           branch: 'frankfurt'
-      - 'elalto':
-          branch: 'elalto'
+      - 'guilin':
+          branch: 'guilin'
+          java-version: openjdk11
       - 'dynamicBPMN':
           branch: 'Dynamic_BPMN'
           java-version: openjdk11
@@ -113,4 +114,4 @@
     build-node: centos7-builder-2c-1g
     project: so
     branch: master
-    branch: frankfurt
+    branch: guilin
