update the guilin release version in ci cd
Issue-ID: SO-3367

Signed-off-by: seshukm <seshu.kumar.m@huawei.com>
Change-Id: I59b529fcd377cefd6a3acd88ff3e02488850979f

--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -16,8 +16,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
-      - 'elalto':
-          branch: 'elalto'
+      - 'guilin':
+          branch: 'guilin'
+          java-version: openjdk11
       - 'frankfurt':
           branch: 'frankfurt'
     mvn-settings: 'so-libs-settings'
@@ -70,4 +71,4 @@
     build-node: centos7-builder-2c-1g
     project: so/libs
     branch: master
-    branch: elalto
+    branch: guilin
