[OOM] Add helm verification to guilin branch
Issue-ID: OOM-1
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: Ic3ff296347aac988b5e784ef718fc17164c7df3e

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -23,6 +23,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
       - 'frankfurt':
           branch: 'frankfurt'
       - 'dublin':
