--- a/jjb/demo/demo.yaml
+++ b/jjb/demo/demo.yaml
@@ -22,6 +22,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
       - 'frankfurt':
           branch: 'frankfurt'
     mvn-settings: 'demo-settings'
