Report all results under archives directory
 - publish all outputs, reports and logs that can be found from
   under archives directory or its subdirectories for both
   new project-specific and old centralized Robot tests

Issue-ID: INT-1786
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I50a1256236095e20d65564aa9f626cd7acb89b6f

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -131,6 +131,9 @@
     publishers:
       - robot:
           output-path: 'archives'
+          output-xml: '**/output.xml'
+          report-html: '**/report.html'
+          log-html: '**/log.html'
           other-files: ''
           unstable-threshold: '{unstable-if}'
           pass-threshold: '{pass-if}'
@@ -141,6 +144,9 @@
     publishers:
       - robot:
           output-path: 'csit/archives'
+          output-xml: '**/output.xml'
+          report-html: '**/report.html'
+          log-html: '**/log.html'
           other-files: ''
           unstable-threshold: '{unstable-if}'
           pass-threshold: '{pass-if}'
