--- a/jjb/integration/integration-docker.yaml
+++ b/jjb/integration/integration-docker.yaml
@@ -17,14 +17,14 @@
       - 'sniroemulator':
           pom: 'test/mocks/sniroemulator/pom.xml'
           pattern: 'test/mocks/sniroemulator/**'
-      - 'mass-pnf-sim':
-          pom: 'test/mocks/mass-pnf-sim/pnf-sim-lightweight/pom.xml'
-          pattern: 'test/mocks/mass-pnf-sim/**'
+      - 'masspnfsim':
+          pom: 'test/mocks/masspnfsim/pnf-sim-lightweight/pom.xml'
+          pattern: 'test/mocks/masspnfsim/**'
           mvn-goals: 'clean package docker:build -Dcheckstyle.skip'
           post-docker-verify-script: |
               #!/bin/bash
               set -ex # Fail build if any setup step fails
-              cd $WORKSPACE/test/mocks/mass-pnf-sim
+              cd $WORKSPACE/test/mocks/masspnfsim
               tox
     mvn-settings: 'integration-settings'
     files: '**'
