--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -11,6 +11,11 @@
         maven-versions-plugin: true
     - '{project-name}-gerrit-release-jobs':
         build-node: centos7-docker-8c-8g
+    - '{project-name}-{stream}-build-and-upload':
+        pre_script: !include-raw-escape: ../vnfrqts/pre-build-needs.sh
+        artifact_name: needs.json
+        project_id: org.onap.vnfsdk.refrepo
+        post_script: !include-raw-escape: ./upload-artifact.sh
     project: 'vnfsdk/validation'
     stream:
         - 'master':
