Add job to upload files for documentation to nexus.
Signed-off-by: Bartosz Gardziejewski <bartosz.gardziejewski@nokia.com>
Change-Id: Ia67a7b0572e7e7e0ac1aa4514e1370db7135588b
Issue-ID: VNFSDK-696

--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -11,6 +11,9 @@
         maven-versions-plugin: true
     - '{project-name}-gerrit-release-jobs':
         build-node: centos7-docker-8c-8g
+    - '{project-name}-{stream}-build-and-upload':
+        project_id: org.onap.vnfsdk.refrepo
+        post_script: !include-raw-escape: ./upload-artifact.sh
     project: 'vnfsdk/validation'
     stream:
         - 'master':
