Add job to upload files for documentation to nexus.
Signed-off-by: Bartosz Gardziejewski <bartosz.gardziejewski@nokia.com>
Change-Id: Ia67a7b0572e7e7e0ac1aa4514e1370db7135588b
Issue-ID: VNFSDK-696

--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -63,3 +63,17 @@
     build-node: ubuntu1804-builder-4c-4g
     branch: 'master'
     mvn-settings: 'vnfsdk-validation-settings'
+
+- project:
+      name: vnfsdk-validation-upload-docs
+      project: 'vnfsdk/validation'
+      project-name: 'vnfsdk-requirements'
+      mvn-settings: 'vnfsdk-validation-settings'
+      mvn-global-settings: 'global-settings'
+      stream:
+          - 'master':
+                branch: 'master'
+      jobs:
+          - '{project-name}-{stream}-build-and-upload':
+                project_id: org.onap.vnfsdk.refrepo
+                post_script: !include-raw-escape: ./upload-artifact.sh
