[DMaaP-DR] Add guilin jobs
Change-Id: I9d226e8cdbeb963b7eff38f5018a0f803086e74a
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Issue-ID: DMAAP-1512

--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -35,9 +35,9 @@
     project: 'dmaap/datarouter'
     stream:
       - 'frankfurt':
-          branch: 'frankfurt'
+          branch: 'guilin'
       - 'elalto':
-          branch: 'elalto'
+          branch: 'frankfurt'
     mvn-settings: 'dmaap-datarouter-settings'
     files: '**'
     archive-artifacts: ''
