Fix trigger path pattern for integration-simulators-ran-simulator
Change-Id: I007a78a5e706f51cd0913f38ae9f0d48cea1ebad
Issue-ID: INT-1725
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/simulators/integration-ran-simulator.yaml
+++ b/jjb/integration/simulators/integration-ran-simulator.yaml
@@ -7,7 +7,7 @@
                   branch: 'master'
       project: 'integration/simulators/ran-simulator'
       mvn-settings: 'integration-simulators-ran-simulator-settings'
-      files: '**'
+      files: 'ransim/**'
       maven-deploy-properties: |
           deployAtEnd=true
       archive-artifacts: ''
